--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "run-p build:client build:server",
     "build:client": "npm run webpack -- --mode production",
     "build:server": "npm run knex -- migrate:latest",
-    "start": "node server",
+    "start": "ts-node server",
     "test": "jest",
     "test:watch": "jest --noStackTrace --watchAll",
     "dev": "run-p dev:client dev:server",
@@ -16,7 +16,7 @@
     "dev:server": "nodemon --watch server server/index.js",
     "webpack": "webpack --config ./client/webpack.config.js",
     "knex": "knex --knexfile ./server/db/knexfile.js",
-    "lint": "eslint --ext .js,.jsx ."
+    "lint": "eslint --ext .js,.ts,.tsx ."
   },
   "keywords": [
     "fullstack"
@@ -42,6 +42,8 @@
     "@babel/plugin-proposal-object-rest-spread": "^7.15.6",
     "@babel/preset-env": "^7.15.6",
     "@babel/preset-react": "^7.14.5",
+    "@babel/preset-typescript": "^7.17.12",
+    "@devacademy/eslint-config": "1.3.3",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^12.7.1",
@@ -55,7 +57,8 @@
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-promise": "^6.0.0",
     "eslint-plugin-react": "^7.29.4",
-    "jest": "^27.5.1",
+    "jest": "^29.2.2",
+    "jest-environment-jsdom": "^29.3.1",
     "mini-css-extract-plugin": "^2.3.0",
     "nodemon": "^2.0.15",
     "npm-run-all": "^4.1.5",
@@ -68,24 +71,29 @@
     "sass": "^1.50.1",
     "sass-loader": "12.6.0",
     "style-loader": "^3.3.0",
+    "ts-jest": "^29.0.3",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.9.3",
+    "sqlite3": "^5.1.2",
     "supertest": "^6.2.2",
     "webpack": "^5.69.1",
-    "webpack-cli": "^4.9.2",
-    "@babel/preset-typescript": "^7.17.12",
-    "@devacademy/eslint-config": "1.3.3"
+    "webpack-cli": "^4.9.2"
   },
   "dependencies": {
-    "sqlite3": "^5.1.2",
     "express": "^4.17.2",
     "knex": "^2.3.0",
     "pg": "^8.8.0",
-    "superagent": "7.1.1"
+    "superagent": "7.1.1",
+    "@types/express": "^4.17.14",
+    "@types/react": "^18.0.25",
+    "@types/react-dom": "^18.0.9"
   },
   "prettier": {
     "semi": false,
     "singleQuote": true
   },
   "jest": {
+    "preset": "ts-jest",
     "testEnvironment": "jsdom"
   },
   "browserslist": "> 2%, not dead"
