--- a/package.json
+++ b/package.json
@@ -23,13 +23,21 @@
   ],
   "author": "Dev Academy Aotearoa",
   "license": "ISC",
+
   "babel": {
     "presets": [
       "@babel/preset-typescript",
       "@babel/preset-env",
-      "@babel/preset-react"
+      [
+        "@babel/preset-react",
+        {
+          "runtime": "automatic"
+        }
+      ]
     ]
   },
+  
+
   "eslintConfig": {
     "extends": "@devacademy/eslint-config/react",
     "ignorePatterns": [
@@ -43,10 +51,14 @@
     "@babel/preset-env": "^7.15.6",
     "@babel/preset-react": "^7.14.5",
     "@babel/preset-typescript": "^7.17.12",
-    "@devacademy/eslint-config": "1.3.3",
+    "@devacademy/eslint-config": "1.6",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^12.7.1",
+    "@types/express": "^4.17.14",
+    "@types/react": "^18.0.25",
+    "@types/react-dom": "^18.0.9",
+    "@types/superagent": "^4.1.16",
     "babel-loader": "^8.2.2",
     "css-loader": "^6.3.0",
     "eslint": "^8.10.0",
@@ -70,23 +82,20 @@
     "redux-thunk": "^2.3.0",
     "sass": "^1.50.1",
     "sass-loader": "12.6.0",
+    "sqlite3": "^5.1.2",
     "style-loader": "^3.3.0",
+    "superagent": "7.1.1",
+    "supertest": "^6.2.2",
     "ts-jest": "^29.0.3",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.3",
-    "sqlite3": "^5.1.2",
-    "supertest": "^6.2.2",
     "webpack": "^5.69.1",
     "webpack-cli": "^4.9.2"
   },
   "dependencies": {
     "express": "^4.17.2",
     "knex": "^2.3.0",
-    "pg": "^8.8.0",
-    "superagent": "7.1.1",
-    "@types/express": "^4.17.14",
-    "@types/react": "^18.0.25",
-    "@types/react-dom": "^18.0.9"
+    "pg": "^8.8.0"
   },
   "prettier": {
     "semi": false,
