--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "description": "Todo Full Stack",
   "repository": "https://https://github.com/dev-academy-challenges/todo-full-stack",
-  "main": "server/index.js",
+  "main": "server/index.ts",
   "scripts": {
     "build": "run-p build:client build:server",
     "build:client": "npm run webpack -- --mode production",
@@ -11,6 +11,7 @@
     "start": "ts-node server",
     "test": "jest",
     "test:watch": "jest --noStackTrace --watchAll",
+    "test:coverage": "jest --coverage",
     "dev": "run-p dev:client dev:server",
     "dev:client": "npm run webpack -- --watch",
     "dev:server": "nodemon --watch server server/index.ts",
@@ -48,14 +49,13 @@
     "@babel/preset-env": "^7.15.6",
     "@babel/preset-react": "^7.14.5",
     "@babel/preset-typescript": "^7.17.12",
-    "@devacademy/eslint-config": "1.6",
+    "@devacademy/eslint-config": "^1.6.0",
     "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^12.1.3",
+    "@testing-library/react": "^13.4",
     "@testing-library/user-event": "^12.7.1",
     "@types/express": "^4.17.14",
-    "@types/react": "^18.0.25",
-    "@types/react-dom": "^18.0.9",
-    "@types/superagent": "^4.1.16",
+    "@types/react": "^18.0.23",
+    "@types/react-dom": "^18.0.7",
     "babel-loader": "^8.2.2",
     "css-loader": "^6.3.0",
     "eslint": "^8.10.0",
@@ -66,37 +66,37 @@
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-promise": "^6.0.0",
     "eslint-plugin-react": "^7.29.4",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "jest": "^29.2.2",
-    "jest-environment-jsdom": "^29.3.1",
     "mini-css-extract-plugin": "^2.3.0",
     "nodemon": "^2.0.15",
     "npm-run-all": "^4.1.5",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-redux": "^7.2.5",
-    "react-router-dom": "^6.2.2",
+    "prettier": "2.6.1",
+    "react": "^18.0.2",
+    "react-dom": "^18.2.0",
+    "react-redux": "^8.0.4",
+    "react-router-dom": "^6.4.2",
     "redux": "^4.1.1",
-    "redux-thunk": "^2.3.0",
+    "redux-thunk": "^2.4.2",
     "sass": "^1.50.1",
     "sass-loader": "12.6.0",
-    "sqlite3": "^5.1.2",
     "style-loader": "^3.3.0",
-    "superagent": "7.1.1",
     "supertest": "^6.2.2",
     "ts-jest": "^29.0.3",
     "ts-node": "^10.9.1",
-    "typescript": "^4.9.3",
+    "typescript": "~4.8.4",
     "webpack": "^5.69.1",
     "webpack-cli": "^4.9.2"
   },
   "dependencies": {
-    "dotenv": "^16.0.3",
-    "dotenv-webpack": "^8.0.1",
+    "@redux-devtools/extension": "^3.2.3",
     "express": "^4.17.2",
     "knex": "^2.3.0",
     "pg": "^8.8.0",
     "semantic-ui-css": "^2.5.0",
-    "semantic-ui-react": "^2.1.4"
+    "semantic-ui-react": "^2.1.4",
+    "sqlite3": "^5.1.2",
+    "superagent": "^8.0.9"
   },
   "prettier": {
     "semi": false,
