--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "@types/express": "^4.17.14",
     "@types/react": "^18.0.23",
     "@types/react-dom": "^18.0.7",
+    "@types/superagent": "^4.1.16",
     "babel-loader": "^8.2.2",
     "css-loader": "^6.3.0",
     "eslint": "^8.10.0",
@@ -90,7 +91,9 @@
   },
   "dependencies": {
     "@redux-devtools/extension": "^3.2.3",
+    "dotenv-webpack": "^8.0.1",
     "express": "^4.17.2",
+    "jest-environment-jsdom": "^29.5.0",
     "knex": "^2.3.0",
     "pg": "^8.8.0",
     "semantic-ui-css": "^2.5.0",
