--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "@babel/preset-react": "^7.14.5",
     "@babel/preset-typescript": "^7.17.12",
     "@devacademy/eslint-config": "^1.6.0",
+    "@redux-devtools/extension": "^3.2.3",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4",
     "@testing-library/user-event": "^12.7.1",
@@ -59,6 +60,7 @@
     "@types/superagent": "^4.1.16",
     "babel-loader": "^8.2.2",
     "css-loader": "^6.3.0",
+    "dotenv-webpack": "^8.0.1",
     "eslint": "^8.10.0",
     "eslint-plugin-import": "^2.25.4",
     "eslint-plugin-jest": "^26.1.1",
@@ -69,6 +71,7 @@
     "eslint-plugin-react": "^7.29.4",
     "eslint-plugin-react-hooks": "^4.6.0",
     "jest": "^29.2.2",
+    "jest-environment-jsdom": "^29.5.0",
     "mini-css-extract-plugin": "^2.3.0",
     "nodemon": "^2.0.15",
     "npm-run-all": "^4.1.5",
@@ -81,25 +84,22 @@
     "redux-thunk": "^2.4.2",
     "sass": "^1.50.1",
     "sass-loader": "12.6.0",
+    "semantic-ui-css": "^2.5.0",
+    "semantic-ui-react": "^2.1.4",
     "style-loader": "^3.3.0",
+    "superagent": "^8.0.9",
     "supertest": "^6.2.2",
     "sqlite3": "^5.1.2",
     "ts-jest": "^29.0.3",
-    "ts-node": "^10.9.1",
     "typescript": "~4.8.4",
     "webpack": "^5.69.1",
     "webpack-cli": "^4.9.2"
   },
   "dependencies": {
-    "@redux-devtools/extension": "^3.2.3",
-    "dotenv-webpack": "^8.0.1",
-    "express": "^4.17.2",
-    "jest-environment-jsdom": "^29.5.0",
+    "express": "^4.17.2", 
     "knex": "^2.3.0",
     "pg": "^8.10.0",
-    "semantic-ui-css": "^2.5.0",
-    "semantic-ui-react": "^2.1.4",
-    "superagent": "^8.0.9"
+    "ts-node": "^10.9.1"
   },
   "prettier": {
     "semi": false,
