--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "@types/superagent": "^4.1.16",
     "babel-loader": "^8.2.2",
     "css-loader": "^6.3.0",
+    "dotenv": "^16.0.3",
     "dotenv-webpack": "^8.0.1",
     "eslint": "^8.10.0",
     "eslint-plugin-import": "^2.25.4",
@@ -86,17 +87,17 @@
     "sass-loader": "12.6.0",
     "semantic-ui-css": "^2.5.0",
     "semantic-ui-react": "^2.1.4",
+    "sqlite3": "^5.1.2",
     "style-loader": "^3.3.0",
     "superagent": "^8.0.9",
     "supertest": "^6.2.2",
-    "sqlite3": "^5.1.2",
     "ts-jest": "^29.0.3",
     "typescript": "~4.8.4",
     "webpack": "^5.69.1",
     "webpack-cli": "^4.9.2"
   },
   "dependencies": {
-    "express": "^4.17.2", 
+    "express": "^4.17.2",
     "knex": "^2.3.0",
     "pg": "^8.10.0",
     "ts-node": "^10.9.1"
